# chopin

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLA.md  CLEANUP_GUIDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PERFORMANCE_FIX_SUMMARY.md  PROFILE_DATE_HEADER.md  PROFILE_REQUEST_PIPELINE.md  README.md  TFB.md  bench_uring_vs_epoll.sh  chopin_pipe.txt  chopin_pipe_date.txt  chopin_res.txt  hyper_pipe.txt  hyper_res.txt  improvement_plan.txt  middleware_test.rs  pipeline.lua  profile.sh  simple_bench.py
.alfred/: conversation.json.tmp  plan.json.tmp
.cargo/: config.toml
.github/: copilot-instructions.md
bench_results/: bench_epoll_20260313_090606.txt
benchmarks/: README.md  compare.sh  http_bench.py  profile.sh  run.sh
chopin/: Cargo.toml
chopin-cli/: Cargo.toml  README.md
chopin-cli/src/: main.rs
chopin-core/: Cargo.toml  README.md
chopin-core/src/: app.rs  cache.rs  config.rs  db.rs  error.rs  fast_http.rs  graphql.rs  json.rs  lib.rs  logging.rs  module.rs  openapi.rs  perf.rs  prelude.rs  response.rs  routing.rs  server.rs  storage.rs  testing.rs
chopin-core/src/auth/: csrf.rs  device_tracking.rs  jwt.rs  lockout.rs  middleware.rs  mod.rs  password.rs  rate_limit.rs  rbac.rs  refresh.rs  security_token.rs  session.rs  totp.rs
chopin-core/src/controllers/: auth.rs  auth_module.rs  mod.rs
chopin-core/src/extractors/: auth_user.rs  json.rs  mod.rs  pagination.rs  permission.rs  role.rs
chopin-core/src/migrations/: m20250211_000001_create_users_table.rs  m20250215_000001_add_security_tables.rs  m20250218_000001_add_rbac_tables.rs  m20250218_000001_initial_schema.rs  mod.rs
chopin-core/src/models/: login_event.rs  mod.rs  permission.rs  refresh_token.rs  role_permission.rs  security_token.rs  session.rs  user.rs
chopin-core/tests/: auth_jwt_tests.rs  auth_password_tests.rs  auth_tests.rs  cache_tests.rs  config_extra_tests.rs  config_tests.rs  db_tests.rs  error_tests.rs  error_unit_tests.rs  extractors_auth_user_tests.rs  extractors_json_tests.rs  extractors_tests.rs  integration_app_tests.rs  json_tests.rs  lib_reexport_tests.rs  models_tests.rs  openapi_tests.rs  perf_tests.rs  rbac_tests.rs  response_extra_tests.rs  response_tests.rs  role_tests.rs  routing_tests.rs  security_tests.rs  server_tests.rs  storage_tests.rs
chopin-examples/basic-api/: .env.example  .gitignore  Cargo.toml  README.md
chopin-examples/basic-api/src/: lib.rs  main.rs
chopin-examples/basic-api/src/controllers/: posts.rs
chopin-examples/basic-api/src/migrations/: m20250101_000001_create_posts_table.rs  m20250211_000002_create_posts_table.rs  mod.rs
chopin-examples/basic-api/src/models/: post.rs
chopin-examples/basic-api/tests/: integration_tests.rs
chopin-examples/benchmark/: Cargo.toml  README.md
chopin-examples/benchmark/src/: main.rs
chopin-examples/hello-world/: Cargo.toml  README.md
chopin-examples/hello-world/src/: main.rs
chopin-examples/performance-mode/: Cargo.toml  README.md
chopin-examples/performance-mode/src/: main.rs
chopin-macros/: Cargo.toml
chopin-macros/src/: lib.rs
chopin-orm/: Cargo.toml
chopin-orm-macro/: Cargo.toml
chopin-orm/benches/: orm_bench.rs
chopin-orm/src/: builder.rs  lib.rs
chopin-orm/tests/: integration.rs
chopin-pg/: Cargo.toml  docker-compose.yml
chopin/examples/: bench_chopin.rs  bench_hyper.rs  hello_json.rs
chopin/src/: conn.rs  extract.rs  http.rs  json.rs  lib.rs  metrics.rs  multipart.rs  parser.rs  router.rs  server.rs  slab.rs  syscalls.rs  worker.rs
crates/chopin-auth/: Cargo.toml
crates/chopin-auth/src/: crypto.rs  extractor.rs  jwks.rs  jwt.rs  lib.rs  middleware.rs  oauth.rs  revocation.rs
crates/chopin-cli/: Cargo.toml
crates/chopin-cli/src/: check.rs  config.rs  deploy.rs  generate.rs  main.rs  migrations.rs  openapi.rs
crates/chopin-core/: Cargo.toml  README.md
crates/chopin-core/benches/: date_header.rs  request_pipeline.rs
crates/chopin-core/examples/: bench_chopin.rs  bench_hyper.rs  benchmark_date_header.rs  hello_json.rs  profile_request_pipeline.rs  tfb.rs  todo_app.rs
crates/chopin-core/src/: conn.rs  error.rs  extract.rs  headers.rs  http.rs  http2.rs  http_date.rs  json.rs  lib.rs  metrics.rs  multipart.rs  openapi.rs  parser.rs  router.rs  server.rs  slab.rs  syscalls.rs  timer.rs  websocket.rs  worker.rs  worker_uring.rs
crates/chopin-core/tests/: e2e_test.rs  integration_test.rs  mock_todos_app.rs  test_magic.rs
crates/chopin-macros/: Cargo.toml
crates/chopin-macros/src/: lib.rs
crates/chopin-orm/: Cargo.toml  README.md
crates/chopin-orm-macro/: Cargo.toml  README.md
crates/chopin-orm-macro/src/: lib.rs
crates/chopin-orm/benches/: orm_bench.rs
crates/chopin-orm/docs/: advanced_guide.md
crates/chopin-orm/examples/: readme_example.rs
crates/chopin-orm/src/: active_model.rs  builder.rs  error.rs  lib.rs  migrations.rs  mock.rs
crates/chopin-orm/tests/: integration.rs
crates/chopin-pg/: BENCHMARKS.md  Cargo.toml  README.md  RUN_BENCHMARKS.md  implement.md
crates/chopin-pg/examples/: bench_compare.rs  bench_monoio_pg.rs  bench_pipeline.rs  bench_tokio_postgres.rs
crates/chopin-pg/src/: auth.rs  codec.rs  connection.rs  error.rs  lib.rs  pool.rs  protocol.rs  row.rs  statement.rs  tls.rs  types.rs
crates/chopin-pg/tests/: integration_test.rs
docs/: BENCHMARKS.md  DEVELOPER_GUIDE.md  FEATURES.md  HIGH_CONCURRENCY_OPTIMIZATION.md  LOGGING.md  PERFORMANCE_OPTIMIZATION.md  QUICK_START.md  README.md  RELEASE_NOTES_0.5.x.md  TFB_COMPLIANCE.md  USAGE_GUIDE.md  api.md  architecture.md  benchmark_comparison_report.md  building-high-performance-apps.md  caching.md  cli-cheatsheet.md  cli.md  configuration.md  controllers-routing.md  debugging-and-logging.md  deployment.md  developer_guide.html  file-uploads.md  getting-started.md  graphql.md  index.html  json-performance.md  llm-learning-guide.md  models-database.md  modular-architecture.md  performance.md  roadmap.md  roles-permissions.md  security.md  styles.css  testing.md  tutorial-advanced.html  tutorial-api.html  tutorial-basics.html  (+6 more)
website/: index.html  tutorial.html
(+34 files in other folders)
