# Internal Code Name: nocturne-op9-no2
[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.5.12"
edition = "2024"
license = "MIT"
authors = ["kowito"]
repository = "https://github.com/kowito/chopin"
homepage = "https://github.com/kowito/chopin"
categories = ["web-programming::http-server", "asynchronous"]
keywords = ["chopin", "http", "performance", "web"]
readme = "README.md"

[workspace.dependencies]
chopin-core = { version = "0.5.12", path = "crates/chopin-core" }
chopin-auth = { version = "0.5.12", path = "crates/chopin-auth" }
chopin-pg = { version = "0.5.12", path = "crates/chopin-pg" }
chopin-orm = { version = "0.5.12", path = "crates/chopin-orm" }
chopin-macros = { version = "0.5.12", path = "crates/chopin-macros" }
chopin-orm-macro = { version = "0.5.12", path = "crates/chopin-orm-macro" }
chopin-cli = { version = "0.5.12", path = "crates/chopin-cli" }
kowito-json = "0.2.11"
mimalloc = { version = "0.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.18"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
