[package]
name = "chopin-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI scaffolding tool for the Chopin web framework"
repository = "https://github.com/kowito/chopin"
homepage = "https://github.com/kowito/chopin"
documentation = "https://docs.rs/chopin-cli"

[[bin]]
name = "chopin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
chopin-core = { version = "0.3.0", path = "../chopin-core" }
utoipa = { version = "5", features = ["yaml"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
dotenvy = "0.15"
