[package]
name = "chopin-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Chopin: High-fidelity engineering for the modern virtuoso."
repository = "https://github.com/kowito/chopin"
homepage = "https://github.com/kowito/chopin"
documentation = "https://docs.rs/chopin-core"

[features]
default = []
redis = ["dep:redis"]
graphql = ["dep:async-graphql", "dep:async-graphql-axum"]
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
perf = ["dep:mimalloc", "dep:sonic-rs"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "parking_lot", "fs", "io-util"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "request-id", "util", "limit"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
bytes = "1"

# Database ORM
sea-orm = { version = "1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
sea-orm-migration = { version = "1", features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres"] }

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
ring = "0.17"
totp-rs = { version = "5", features = ["gen_secret", "qr"] }
base32 = "0.5"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# TLS
rustls = "0.23"

# OpenAPI / Swagger
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }

# Configuration
dotenvy = "0.15"

# Performance
http-body = "1"
httpdate = "1"
mimalloc = { version = "0.1", optional = true }
sonic-rs = { version = "0.5", optional = true }
socket2 = { version = "0.5", features = ["all"] }

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
validator = { version = "0.19", features = ["derive"] }
async-trait = "0.1"
serde_urlencoded = "0.7"
mime_guess = "2"

# Optional: Redis caching
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

# Optional: GraphQL
async-graphql = { version = "7", features = ["chrono", "uuid"], optional = true }
async-graphql-axum = { version = "7", optional = true }

# Chopin proc macros (login_required, permission_required)
chopin-macros = "0.3"

# Optional: S3-compatible object storage (AWS S3, Cloudflare R2, MinIO, etc.)
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }

[dependencies.reqwest]
version = "0.12"
features = ["json"]
