[package]
name = "chopin-basic-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Example basic API application built with Chopin"

[dependencies]
chopin-core = { path = "../../chopin-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
