[package]
name = "chopin-benchmark"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Benchmark server for Chopin — Performance mode with raw hyper"

[dependencies]
chopin-core = { path = "../../chopin-core", features = ["perf"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
