[package]
name = "chopin-hello-world"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal Chopin example — OpenAPI docs with 3 endpoints, zero config"

[dependencies]
chopin-core = { path = "../../chopin-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
utoipa = "5"
