[package]
name = "chopin-performance-mode"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Performance mode deep-dive example with benchmarks"

[dependencies]
chopin-core = { path = "../../chopin-core", features = ["perf"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
