[package]
name = "chopin-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Zero-overhead JWT authentication and RBAC for the Chopin framework."

[dependencies]
chopin-core = { version = "0.5.4", path = "../chopin-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.138"
jsonwebtoken = "9.3.0"
argon2 = { version = "0.5.3", features = ["std", "password-hash"] }
