[package]
name = "chopin-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Zero-overhead JWT authentication and RBAC for the Chopin framework."

[dependencies]
chopin-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = "9.3.0"
argon2 = { version = "0.5.3", features = ["std", "password-hash"] }
