[package]
name = "chopin-cli"
version = "0.1.0"
edition = "2024"
authors = ["kowito <kowit.s.c@gmail.com>"]
description = "CLI tool for the Chopin HTTP framework"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
dialoguer = "0.11.0"
indicatif = "0.17.11"
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.96"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.138"
toml = "0.8.20"
fs_extra = "1.3.0"
walkdir = "2.5.0"
colored = "3.0.0"

[dev-dependencies]
tempfile = "3.17.1"
