[package]
name = "chopin-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI tool for scaffolding and managing Chopin applications."

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
dialoguer = "0.11.0"
indicatif = "0.17.11"
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.96"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8.20"
fs_extra = "1.3.0"
walkdir = "2.5.0"
colored = "3.0.0"

[dev-dependencies]
tempfile = "3.17.1"
