[package]
name = "chopin-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The extremely fast, zero-overhead HTTP engine for the Chopin framework."

[features]
default = ["catch-panic"]
catch-panic = []
io-uring = []
compression = ["dep:flate2"]

[dependencies]
arrayvec = "0.7"
core_affinity = "0.8.3"
ctrlc = "3.4.5"
flate2 = { version = "1", optional = true }
kowito-json = { workspace = true }
libc = "0.2.180"
mimalloc = { workspace = true }
num_cpus = "1.17.0"
serde = { workspace = true }
serde_urlencoded = "0.7"
serde_json = { workspace = true }
inventory = "0.3.22"
chopin-macros = { workspace = true }
memchr = "2.8.0"
httpdate = "1.0.3"

[dev-dependencies]
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1.40.0", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.7", features = ["full"] }
chopin-pg = { workspace = true }
chopin-orm = { workspace = true }
lazy_static = "1.4.0"
thiserror = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "request_pipeline"
harness = false
