[package]
name = "chopin-orm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A lightweight, zero-overhead ORM for the Chopin framework."

[dependencies]
chopin-pg = { workspace = true }
chopin-orm-macro = { workspace = true }
async-trait = "0.1.86"
log = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "orm_bench"
harness = false
