[package]
name = "chopin-pg"
version = "0.5.1"
edition = "2024"
license = "MIT"
description = "Zero-copy PostgreSQL driver for the Chopin thread-per-core architecture"

[dependencies]
libc = "0.2.180"

[dev-dependencies]
monoio = { version = "0.2.4", features = ["macros", "utils"] }
monoio-pg = "0.1.10"
tokio-postgres = "0.7"
tokio = { version = "1.40", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
