[package]
name = "chopin-pg"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A high-performance, asynchronous PostgreSQL driver for the Chopin framework."

[dependencies]
libc = "0.2.180"
chrono = { version = "0.4", optional = true }
rust_decimal = { version = "1", optional = true }

[features]
default = []
chrono = ["dep:chrono"]
decimal = ["dep:rust_decimal"]

[dev-dependencies]
monoio = { version = "0.2.4", features = ["macros", "utils"] }
monoio-pg = "0.1.10"
tokio-postgres = "0.7"
tokio = { version = "1.40", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
