[package]
name = "chopin-pg"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A high-performance, asynchronous PostgreSQL driver for the Chopin framework."

[dependencies]
libc = "0.2.180"
chrono = { version = "0.4", optional = true }
rust_decimal = { version = "1", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "tls12"] }
webpki-roots = { version = "0.26", optional = true }
rustls-pki-types = { version = "1", optional = true }
rustls-pemfile = { version = "2", optional = true }

[features]
default = []
chrono = ["dep:chrono"]
decimal = ["dep:rust_decimal"]
tls = ["dep:rustls", "dep:webpki-roots", "dep:rustls-pki-types", "dep:rustls-pemfile"]

[dev-dependencies]
monoio = { version = "0.2.4", features = ["macros", "utils"] }
monoio-pg = "0.1.10"
tokio-postgres = "0.7"
tokio = { version = "1.40", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "macros"] }